<resources>
    <string name="app_name">Notemates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="switch_to_login">Sudah punya akun? Masuk sekarang</string>
    <string name="switch_to_register">Belum punya akun? Daftar sekarang</string>
    <string name="name_validation_empty">Nama lengkap tidak boleh kosong!</string>
    <string name="email_validation_empty">Alamat email tidak boleh kosong!</string>
    <string name="password_validation_empty">Kata sandi tidak boleh kosong!</string>
    <string name="title_validation_empty">Judul tidak boleh kosong!</string>
    <string name="description_validation_empty">Deskripsi tidak boleh kosong!</string>
    <string name="content_validation_empty">Konten tidak boleh kosong!</string>
    <string name="confirm_password_validation_incorrect">Konfirmasi kata sandi tidak cocok!</string>
    <string name="something_went_wrong">Terjadi kesalahan tak terduga!</string>
    <string name="bad_request">Request tidak valid!</string>
    <string name="email_already_registered">Alamat email sudah terdaftar! Silahkan gunakan alamat email lain</string>
    <string name="email_not_found">Alamat email tidak ditemukan! Silahkan gunakan alamat email lain</string>
    <string name="invalid_email_or_password">Alamat email atau kata sandi tidak valid!</string>
    <string name="dashboard">Dashboard</string>
    <string name="explore">Explore</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="logout">Keluar</string>
    <string name="detail">Rincian</string>
    <string name="content">Konten</string>
    <string name="preview">Pratinjau</string>
    <string name="create_note">Buat Catatan</string>
    <string name="publish">Publikasi</string>
    <string name="loading">Memuat</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="publish_as">Publikasikan sebagai</string>
    <string name="write_something">Ketik sesuatu</string>
    <string name="dashboard_greeting">Hello, %s</string>
    <string name="format_followers">%d pengikut</string>
    <string name="format_readers">%d pembaca</string>
    <string name="format_likes">%d suka</string>
    <string name="note">Catatan</string>
    <string name="following">Mengikuti</string>
    <string name="follower">Pengikut</string>"
</resources>