<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/application_navigation"
    app:startDestination="@id/dashboard_fragment">
    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="com.notemates.ui.main.fragments.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/explore_fragment"
        android:name="com.notemates.ui.main.fragments.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/trending_fragment"
        android:name="com.notemates.ui.main.fragments.trending.TrendingFragment"
        android:label="@string/trending"
        tools:layout="@layout/fragment_trending" />
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.notemates.ui.main.fragments.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>